Suggest Location Logic and Refactor code

--- a/inventory_advanced/views/menu_views.xml
+++ b/inventory_advanced/views/menu_views.xml
@@ -7,10 +7,10 @@
         sequence="4"
         groups="stock.group_stock_manager"/>
 
-    <menuitem id="menu_crack_type_root"
-        name="Crack Types"
+    <menuitem id="menu_rack_type_root"
+        name="Rack Types"
         parent="stock.menu_warehouse_config"
-        action="inventory_advanced.action_crack_type"
+        action="inventory_advanced.action_rack_type"
         sequence="5"
         groups="stock.group_stock_manager"/>
 </odoo>
